--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>driverbot console</title>
+        <title>driverbot Dashboard</title>
+        <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
         <!-- Include Socket.IO library -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.5/socket.io.js" integrity="sha512-luMnTJZ7oEchNDZAtQhgjomP1eZefnl82ruTH/3Oj/Yu5qYtwL7+dVRccACS/Snp1lFXq188XFipHKYE75IaQQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <link rel="stylesheet" href="style.css">
@@ -12,15 +13,18 @@
     <body>
         <div class="menu-overlay">
             <img class="close-icon" src="./assets/close-icon.svg" alt="close menu icon">
-            <p class="menu-paragraph">Some useful links for this project</p>
+            <p class="menu-paragraph">Some useful links for this project.</p>
             <div class="menu-frame">
-                <a href="" class="menu-link link">Help</a>
+                <a href="https://github.com/abbindustrigymnasium/driverbot-hannes/blob/main/README.md" target="_blank" class="menu-link link">Help</a>
                 <a href="https://github.com/abbindustrigymnasium/driverbot-hannes/blob/main/ROADMAP.md" target="_blank" class="menu-link link">Project Roadmap</a>
             </div>
         </div>
         <div class="toprow">
             <div>
-                <h1>driverbot</h1>
+                <div class="leftside-toprow">
+                    <img class="logo" src="./assets/logo-frame1.svg" alt="driverbot logo">
+                    <h1>driverbot</h1>
+                </div>
                 <p class="driverbot-info">short description</p>
             </div>
             <nav>
@@ -29,32 +33,46 @@
             </nav>
         </div>
         <main>
-            <div class="connect-form">
-                <div>
+            <section class="connect-form">
+                <form action="javascript:connect()">
                     <div class="connect-form-info">
-                        <h2 class="connect-title">Connect</h2>
-                        <p class="form-alt-text">You will need to connect to the MQTT broker.</p>
+                        <h2>Connect</h2>
+                        <p class="form-alt-text">You will need to connect to the MQTT broker.<br>* are required.</p>
                     </div>
                     <div class="connect-form-inputs">
                         <div>
-                            <p class="input-description">Client ID:</p>
+                            <p class="input-description">Username *</p>
+                            <input type="text" name="username" id="username" required>
+                        </div>
+                        <div>
+                            <p class="input-description">Password *</p>
+                            <input type="password" name="password" id="password" required>
+                        </div>
+                        <div>
+                            <p class="input-description">Client ID</p>
                             <input type="text" name="clientId" id="clientId">
                         </div>
-                        <div>
-                            <p class="input-description">Username:</p>
-                            <input type="text" name="username" id="username">
-                        </div>
-                        <div>
-                            <p class="input-description">Password:</p>
-                            <input type="password" name="password" id="password">
-                        </div>
-                        <!--<button type="button">Connect</button>-->
                         <div class="form-button-wrapper">
-                            <button class="button" onclick="connect()"><span class="button-text">Connect</span><span class="button-text">To MQTT</span></button>
+                            <button class="button" type="submit"><span class="button-text">Connect &#129149;</span><span class="button-text">To MQTT</span></button>
                         </div>
                     </div>
+                </form>
+            </section>
+            <section class="monitor-section">
+                <div>
+                    <div>
+                        <h2>About your connection.</h2>
+                    </div>
+                    <div class="info-list">
+                        <p class="info-cluster">Cluster URL: </p>
+                        <p class="info-port">Port: </p>
+                        <p class="info-protocol">Protocol: </p>
+                        <p class="info-username">Username:</p>
+                        <p class="info-password">Password: </p>
+                        <p class="info-time"><br>Connected for X time</p>
+                    </div>
                 </div>
-            </div>
+            </section>
         </main>
         <footer>
             <div class="footer-group">
@@ -65,7 +83,7 @@
                 </label>
             </div>
             <div class="credit-notice">
-                <p>made by Hannes</p>
+                <p>by Hannes</p>
             </div>
             <div class="footer-group">
                 <a target="_blank" href="https://github.com/abbindustrigymnasium/driverbot-hannes.git" class="link-light">github</a>
