Testing with EMQX

--- a/web/about.html
+++ b/web/about.html
@@ -26,7 +26,7 @@
         <div class="toprow">
             <div>
                 <div class="leftside-toprow">
-                    <img class="logo" src="./assets/logo-frame1.svg" alt="driverbot logo">
+                    <a href="./index.html" class="logo-link"><img class="logo" src="./assets/logo-frame1.svg" alt="driverbot logo"></a>
                     <h1>driverbot</h1>
                 </div>
                 <p class="driverbot-info mono">A project about a small-scale Lego-based vehicle.</p>
@@ -40,10 +40,10 @@
             <section class="about">
                 <h1 class="about-title">About driverbot</h1>
                 <article>
-                    <p class="mono">The driverbot project started in March 2024. It's a school project aimed to create a small-scale Lego-based car. The technologies used in the project are MQTT, ESP8266 microcontroller, motors, servos, cad-modelled parts among other things.<br><br></p>
+                    <p class="mono">The driverbot project started in March 2024. It's a school project aimed to create a small-scale Lego-based car. The technologies used are MQTT, ESP8266 microcontroller, motors, servos and cad-modelled parts.<br><br></p>
                     <p class="mono">The requirments were as follows, the car should be:</p>
                     <ul class="mono">
-                        <li>Able to steere forward, left, right and backwards.</li>
+                        <li>Able to drive/steere forward, left, right and backwards.</li>
                         <li>Controllable via a website.</li>
                         <li>At max 15x15x15 centimeters in size.</li>
                     </ul>
